# repoctx

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.agents/: skillfile
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  kind.rs  lib.rs  trait_def.rs  treesitter.rs  types.rs
crates/backend/tests/: call_graph.rs  serde_shape.rs
crates/bench-tokens/: Cargo.toml
crates/bench-tokens/src/: main.rs
crates/index/: Cargo.toml
crates/index/queries/: NOTICE  bash-tags.scm  c-calls.scm  c-imports.scm  cpp-calls.scm  cpp-imports.scm  go-calls.scm  go-imports.scm  java-calls.scm  java-imports.scm  javascript-calls.scm  javascript-imports.scm  json-deep.scm  json.scm  kotlin-tags.scm  markdown.scm  python-calls.scm  python-imports.scm  rust-calls.scm  rust-imports.scm  toml-deep.scm  toml.scm  typescript-tags.scm  yaml-deep.scm  yaml.scm
crates/index/src/: extractor.rs  language.rs  lib.rs
crates/index/tests/: calls.rs  integration.rs  v07_languages.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: content.rs  error.rs  fetcher.rs  installer.rs  lib.rs  manifest.rs
crates/repoctx/: Cargo.toml
crates/repoctx/assets/: hook.sh.tmpl
crates/repoctx/src/: advisory.rs  analysis_cmd.rs  callgraph_cmd.rs  changed_cmd.rs  communities_cmd.rs  config.rs  config_cmd.rs  context_cmd.rs  definition_cmd.rs  deps_cmd.rs  discover_cmd.rs  export_cmd.rs  export_template.html  gain.rs  gain_cmd.rs  hook_cmd.rs  hook_marker.rs  hook_rewrite.rs  hook_scan.rs  hook_script.rs  hook_takeover.rs  index_cmd.rs  init_cmd.rs  languages_cmd.rs  main.rs  modulegraph_cmd.rs  outline_cmd.rs  output.rs  output_calls.rs  output_symbols.rs  output_tests.rs  overview_cmd.rs  prime_cmd.rs  read_cmd.rs  repo_root.rs  report_cmd.rs  resolver.rs  search_cmd.rs  session_hook.rs  status_cmd.rs  (+2 more)
crates/repoctx/tests/: accuracy_parity.rs  analysis_cmd.rs  callgraph_cmd.rs  changed_cmd.rs  concurrency.rs  deps_cmd.rs  discover_cmd.rs  doctor.rs  e2e.rs  gain_cmd.rs  gain_wire.rs  hook_e2e.rs  hook_script_e2e.rs  index_cmd.rs  init_cmd.rs  modulegraph_cmd.rs  overview_cmd.rs  rewrite_cmd.rs  rewrite_corpus.rs  search_cmd.rs  status_cmd.rs  symbols_cmd.rs  uninstall.rs
crates/repoctx/tests/fixtures/: rewrite_corpus.toml
crates/repoctx/tests/fixtures/parity/: expected.toml
crates/repoctx/tests/fixtures/parity/go/: main.go
crates/repoctx/tests/fixtures/parity/js/: app.js
crates/repoctx/tests/fixtures/parity/json/: config.json
crates/repoctx/tests/fixtures/parity/markdown/: doc.md
crates/repoctx/tests/fixtures/parity/python/: mod.py
crates/repoctx/tests/fixtures/parity/rust/: a.rs  b.rs
crates/repoctx/tests/fixtures/parity/toml/: conf.toml
crates/repoctx/tests/fixtures/parity/ts/: svc.ts
crates/repoctx/tests/fixtures/parity/tsx/: comp.tsx
crates/repoctx/tests/fixtures/parity/yaml/: deploy.yaml
crates/store/: Cargo.toml
crates/store/src/: error.rs  gain.rs  lib.rs  like.rs  migrations.rs  record.rs  store.rs
crates/store/tests/: gain.rs  integration.rs
integrations/: README.md
integrations/claude/: CLAUDE.md.fragment  manifest.toml
integrations/codex/: manifest.toml
integrations/opencode/: manifest.toml  plugin.ts
integrations/shared/: AGENTS.md.fragment  SKILL.md
scripts/: bench.sh  platform-check.sh  skills-bootstrap.sh
scripts/adoption-probe/: .gitignore  README.md  RESULTS.md  firm.sh  run.sh  summarize.py  tally.py  tasks-heartwood.txt  tasks.txt
scripts/agent-bench/: README.md  helix.bats  linux.bats  report.sh  run.sh  rust-analyzer.bats  smoke.bats  vuejs-core.bats
scripts/agent-bench/lib/: helpers.bash
scripts/rtk-fidelity/: README.md  run.sh
wiki/: expansion-roadmap.md  index.md
wiki/adr/: 0001-cli-first-architecture.md  0002-tree-sitter-primary-backend.md  0003-sqlite-source-of-truth.md  0004-backend-abstraction.md  0005-lsp-optional-backend.md  0006-mtime-based-cache-invalidation.md  0007-incremental-file-local-updates.md  0008-toon-default-machine-output.md  0009-license-lgpl-3-or-later.md  0010-static-call-graph.md  0011-import-dependency-graph.md  README.md
wiki/agents/: architecture.md  commands.md  conventions.md  deferred.md  dev-setup.md  glossary.md  index.md  status.md  working-on-issues.md
wiki/bench/: results.md
wiki/decisions/: 2026-06-11-gain-tokenizer-and-baseline.md  2026-06-11-grammar-crate-selection.md  2026-06-11-platform-agnostic.md  2026-06-12-config-schema.md  2026-06-12-rewrite-hook-design.md  2026-06-13-agent-bench.md  2026-06-13-grammar-loading-strategy.md  2026-06-13-repoctx-init.md  2026-06-14-flag-aware-rewrite.md  2026-06-14-github-primary-forge.md  2026-06-14-textually-complete-search.md  2026-06-15-callee-index-scope-resolution.md  2026-06-15-github-only-forge.md  2026-06-15-search-provenance.md  2026-06-16-adoption-via-priming.md  2026-06-16-graph-node-identity.md  2026-06-16-import-alias-resolution.md  2026-06-16-louvain-hand-rolled.md  2026-06-16-petgraph-for-graph-algos.md  2026-06-16-receiver-aware-call-resolution.md  2026-06-17-remove-pretooluse-hook.md  README.md
wiki/user/: commands.md  config.md  gain.md  hook.md  index.md  init.md  installation.md  output-formats.md  quickstart.md  why-repoctx.md
