[workspace]
resolver = "2"
members = [
    "crates/repoctx",
    "crates/backend",
    "crates/index",
    "crates/store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "LGPL-3.0-or-later"
repository = "https://github.com/mikolajmikolajczyk/repoctx"
authors = ["Mikołaj Mikołajczyk"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.5"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Indexing
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = { version = "0.5", default-features = false }

# Walking + parallelism
ignore = "0.4"
walkdir = "2"
rayon = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
repoctx-backend = { path = "crates/backend" }
repoctx-index = { path = "crates/index" }
repoctx-store = { path = "crates/store" }

# Dev
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
