[workspace]
resolver = "2"
members = [
    "crates/repoctx",
    "crates/backend",
    "crates/index",
    "crates/integrations",
    "crates/store",
    "crates/bench-tokens",
]

[workspace.package]
version = "0.15.0"
edition = "2021"
rust-version = "1.85"
license = "LGPL-3.0-or-later"
repository = "https://github.com/mikolajmikolajczyk/repoctx"
authors = ["Mikołaj Mikołajczyk"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Graph algorithms (ephemeral compute over store edges — see
# wiki/decisions/2026-06-16-petgraph-for-graph-algos.md)
petgraph = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.5"
toml = "0.8"


# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Indexing
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = { version = "0.5", default-features = false }
# v0.7.0 language batch (epic 9cf4c18) — official tree-sitter-org crates
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"

# Walking + parallelism
ignore = "0.4"
walkdir = "2"
rayon = "1"

# Tokenizer (gain analytics)
tiktoken-rs = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
repoctx-backend = { path = "crates/backend" }
repoctx-index = { path = "crates/index" }
repoctx-integrations = { path = "crates/integrations" }
repoctx-store = { path = "crates/store" }

# Dev
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
