[package]
name = "repoctx-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tree-sitter symbol extraction for repoctx."

[dependencies]
repoctx-store.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-json.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-md.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
repoctx-store.workspace = true
