[package]
name = "repoctx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AI-oriented repository intelligence CLI."

[[bin]]
name = "repoctx"
path = "src/main.rs"

[dependencies]
repoctx-backend.workspace = true
repoctx-index.workspace = true
repoctx-store.workspace = true

clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toon-format.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ignore.workspace = true
rayon.workspace = true
tiktoken-rs.workspace = true

[dev-dependencies]
rusqlite.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
